<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/sword_gray"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/student_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:paddingHorizontal="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cloud_white"
        android:textColorHint="@color/cloud_white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/student_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/student_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:paddingHorizontal="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cloud_white"
        android:textColorHint="@color/cloud_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/student_department"
        app:layout_constraintStart_toEndOf="@id/student_name"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/student_department"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/department"
        android:paddingHorizontal="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cloud_white"
        android:textColorHint="@color/cloud_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/student_gpa"
        app:layout_constraintStart_toEndOf="@id/student_age"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/student_gpa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/gpa"
        android:paddingHorizontal="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cloud_white"
        android:textColorHint="@color/cloud_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/student_department"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>