<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sword_gray"
    android:theme="@style/Theme.Material3.DynamicColors.Dark.NoActionBar"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/partial_black"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/students_title"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/student_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="end|center_vertical"
        android:minWidth="140dp"
        android:paddingHorizontal="16sp"
        android:paddingVertical="10dp"
        android:text="@string/name"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/student_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_title" />

    <EditText
        android:id="@+id/student_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/cloud_white"
        android:textColorHint="@color/cloud_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/student_name_label"
        app:layout_constraintTop_toBottomOf="@id/page_title"
        app:layout_constraintWidth_max="320dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/student_age_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="end|center_vertical"
        android:minWidth="140dp"
        android:paddingHorizontal="16sp"
        android:paddingVertical="10dp"
        android:text="@string/age"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/student_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_name_label" />

    <EditText
        android:id="@+id/student_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:hint="@string/age"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/cloud_white"
        android:textColorHint="@color/cloud_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/student_age_label"
        app:layout_constraintTop_toBottomOf="@id/student_name_label"
        app:layout_constraintWidth_max="320dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/student_department_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="end|center_vertical"
        android:minWidth="140dp"
        android:paddingHorizontal="16sp"
        android:paddingVertical="10dp"
        android:text="@string/department"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/student_department"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_age_label" />

    <Spinner
        android:id="@+id/student_department"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:hint="@string/department"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/cloud_white"
        android:textColorHint="@color/cloud_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/student_department_label"
        app:layout_constraintTop_toBottomOf="@id/student_age_label"
        app:layout_constraintWidth_max="320dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/student_gpa_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="end|center_vertical"
        android:minWidth="140dp"
        android:paddingHorizontal="16sp"
        android:paddingVertical="10dp"
        android:text="@string/gpa"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/student_gpa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_department_label" />

    <EditText
        android:id="@+id/student_gpa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:hint="@string/gpa"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/cloud_white"
        android:textColorHint="@color/cloud_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/student_gpa_label"
        app:layout_constraintTop_toBottomOf="@id/student_department_label"
        app:layout_constraintWidth_max="320dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/show_top_students"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/show_top_students"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/add_student"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_gpa_label"
        app:layout_constraintWidth_max="240dp" />

    <Button
        android:id="@+id/add_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_student"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/show_top_students"
        app:layout_constraintTop_toBottomOf="@id/student_gpa_label"
        app:layout_constraintWidth_max="240dp" />

    <Button
        android:id="@+id/show_all_users"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/show_all"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/reset_fields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_top_students"
        app:layout_constraintWidth_max="240dp" />

    <Button
        android:id="@+id/reset_fields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/reset"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/show_all_users"
        app:layout_constraintTop_toBottomOf="@id/add_student"
        app:layout_constraintWidth_max="240dp" />

    <TextView
        android:id="@+id/sort_by_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:foregroundGravity="left|center_vertical"
        android:gravity="center"
        android:text="@string/sort_by"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/sort_by"
        app:layout_constraintHorizontal_weight="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_all_users" />

    <Spinner
        android:id="@+id/sort_by"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:foregroundGravity="right|center_vertical"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.8"
        app:layout_constraintStart_toEndOf="@id/sort_by_label"
        app:layout_constraintTop_toBottomOf="@id/show_all_users" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/students"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by_label" />

</androidx.constraintlayout.widget.ConstraintLayout>